# escalation-path-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/escalation_path_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_escalation_path_check.py
